--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,7 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  position: relative;
 }
 
 .section__pic-container .profile-pic {
@@ -355,7 +356,8 @@ article .icon {
 /* PROJECTS SECTION */
 
 #projects {
-  position: absolute;
+  position: relative; /* Change from absolute to relative */
+  padding-bottom: 4vh;
 }
 
 .article-container > #kerala {
@@ -412,8 +414,13 @@ article .icon {
   background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
+  transition: all 0.3s ease-in;
 }
 
+.contact-info-upper-container:hover {
+  transform: scale(1.1);
+  box-shadow: 0 3px 8px rgb(85, 85, 85);
+}
 .contact-info-container {
   display: flex;
   align-items: center;
